--- a/index.html
+++ b/index.html
@@ -23,9 +23,190 @@
 
   <section class="grid-section animais" id="animais">
     <h1>Animais Fantásticos</h1>
+    <ul>
+      <li>
+        <img src="img/imagem1.jpg" alt="">
+      </li>
+      <li>
+        <img src="img/imagem2.jpg" alt="">
+      </li>
+      <li>
+        <img src="img/imagem3.jpg" alt="">
+      </li>
+      <li>
+        <img src="img/imagem4.jpg" alt="">
+      </li>
+      <li>
+        <img src="img/imagem5.jpg" alt="">
+      </li>
+      <li>
+        <img src="img/imagem6.jpg" alt="">
+      </li>
+    </ul>
+
 
   </section>
 
+  <div class="animais-descricao">
+    <section>
+      <h2>Raposa</h2>
+      <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
+        têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma cauda
+        longa e espessa.</p>
+      <p>
+        Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente outras
+        25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+        periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+      </p>
+      <p>
+        As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
+        raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
+        das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+        popular e no folclore em muitas sociedades ao redor do mundo.
+      </p>
+
+    </section>
+
+    <section>
+      <h2>Esquilo</h2>
+      <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
+        têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma cauda
+        longa e espessa.</p>
+      <p>
+        Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente outras
+        25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+        periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+      </p>
+      <p>
+        As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
+        raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
+        das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+        popular e no folclore em muitas sociedades ao redor do mundo.
+      </p>
+
+
+      <section>
+        <h2>Urso</h2>
+        <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
+          têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
+          cauda
+          longa e espessa.</p>
+        <p>
+          Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+          outras
+          25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+          periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+        </p>
+        <p>
+          As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
+          raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
+          das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+          popular e no folclore em muitas sociedades ao redor do mundo.
+        </p>
+
+
+        <section>
+          <h2>Lobo</h2>
+          <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+            raposas
+            têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
+            cauda
+            longa e espessa.</p>
+          <p>
+            Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+            outras
+            25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+            periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+          </p>
+          <p>
+            As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
+            raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
+            global
+            das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+            popular e no folclore em muitas sociedades ao redor do mundo.
+          </p>
+
+          <section>
+            <h2>Macaco</h2>
+            <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+              raposas
+              têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
+              cauda
+              longa e espessa.</p>
+            <p>
+              Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+              outras
+              25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+              periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+            </p>
+            <p>
+              As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida
+              de
+              raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
+              global
+              das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+              popular e no folclore em muitas sociedades ao redor do mundo.
+            </p>
+
+            <section>
+              <h2>Leão</h2>
+              <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+                raposas
+                têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e
+                uma cauda
+                longa e espessa.</p>
+              <p>
+                Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+                outras
+                25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+                periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+              </p>
+              <p>
+                As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida
+                de
+                raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
+                global
+                das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na
+                cultura
+                popular e no folclore em muitas sociedades ao redor do mundo.
+              </p>
+
+  </div>
+
+  <section class="grid-section faq" id="faq">
+    <h1>FAQ</h1>
+    <dl>
+      <dt>Qual idade dos animais?</dt>
+      <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio,
+        caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+
+      <dt>Eles são fantásticos?</dt>
+      <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+
+      <dt>Qual a diferença?</dt>
+      <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio,
+        caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+
+      <dt>Como proteger?</dt>
+      <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+    </dl>
+  </section>
+
+    <section class="grid-section contato" id="contato">
+      <h1>Contato</h1>
+      <div class="mapa">
+        <img src="img/mapa.png" alt="Mapa">
+      </div>
+      <ul class="dados">
+        <li>contato@mariana.com.br</li>
+        <li>+55 61 98197-6589</li>
+        <li>Rua do Conde nº 5674.</li>
+        <li>Rio de Janeiro - RJ</li>
+      </ul>
+    </section>
+    <footer class="copy">
+      <p>Todos os direitos reservados</p>
+    </footer>
   <script src="script.js"></script>
 </body>
 
