--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <title>Animais Fantásticos</title>
 </head>
@@ -22,8 +25,8 @@
   </nav>
 
   <section class="grid-section animais" id="animais">
-    <h1>Animais Fantásticos</h1>
-    <ul>
+    <h1 class="titulo">Animais Fantásticos</h1>
+    <ul class="animais-lista">
       <li>
         <img src="img/imagem1.jpg" alt="">
       </li>
@@ -43,50 +46,9 @@
         <img src="img/imagem6.jpg" alt="">
       </li>
     </ul>
-
-
-  </section>
-
-  <div class="animais-descricao">
-    <section>
-      <h2>Raposa</h2>
-      <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
-        têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma cauda
-        longa e espessa.</p>
-      <p>
-        Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente outras
-        25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
-        periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
-      </p>
-      <p>
-        As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
-        raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
-        das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
-        popular e no folclore em muitas sociedades ao redor do mundo.
-      </p>
-
-    </section>
-
-    <section>
-      <h2>Esquilo</h2>
-      <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
-        têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma cauda
-        longa e espessa.</p>
-      <p>
-        Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente outras
-        25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
-        periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
-      </p>
-      <p>
-        As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
-        raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
-        das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
-        popular e no folclore em muitas sociedades ao redor do mundo.
-      </p>
-
-
+    <div class="animais-descricao">
       <section>
-        <h2>Urso</h2>
+        <h2>Raposa</h2>
         <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
           têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
           cauda
@@ -103,79 +65,130 @@
           das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
           popular e no folclore em muitas sociedades ao redor do mundo.
         </p>
+      </section>
+
+      <section>
+        <h2>Esquilo</h2>
+        <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As raposas
+          têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
+          cauda
+          longa e espessa.</p>
+        <p>
+          Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+          outras
+          25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+          periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+        </p>
+        <p>
+          As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
+          raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
+          das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+          popular e no folclore em muitas sociedades ao redor do mundo.
+        </p>
+      </section>
+
+      <section>
+        <h2>Urso</h2>
+        <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+          raposas
+          têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
+          cauda
+          longa e espessa.</p>
+        <p>
+          Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+          outras
+          25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+          periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+        </p>
+        <p>
+          As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
+          raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição global
+          das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+          popular e no folclore em muitas sociedades ao redor do mundo.
+        </p>
+      </section>
+
+      <section>
+        <h2>Lobo</h2>
+        <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+          raposas
+          têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
+          cauda
+          longa e espessa.</p>
+        <p>
+          Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+          outras
+          25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+          periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+        </p>
+        <p>
+          As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida
+          de
+          raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
+          global
+          das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
+          popular e no folclore em muitas sociedades ao redor do mundo.
+        </p>
+      </section>
+
+      <section>
+        <h2>Macaco</h2>
+        <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+          raposas
+          têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e
+          uma
+          cauda
+          longa e espessa.</p>
+        <p>
+          Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
+          outras
+          25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+          periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+        </p>
+        <p>
+          As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida
+          de
+          raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
+          global
+          das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na
+          cultura
+          popular e no folclore em muitas sociedades ao redor do mundo.
+        </p>
+      </section>
+
+      <section>
+        <h2>Leão</h2>
+        <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
+          raposas
+          têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e
+          uma cauda
+          longa e espessa.</p>
+        <p>
+          Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes.
+          Aproximadamente
+          outras
+          25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
+          periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
+        </p>
+        <p>
+          As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e
+          difundida
+          de
+          raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
+          global
+          das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na
+          cultura
+          popular e no folclore em muitas sociedades ao redor do mundo.
+        </p>
+      </section>
+    </div>
+  </section>
 
 
-        <section>
-          <h2>Lobo</h2>
-          <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
-            raposas
-            têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
-            cauda
-            longa e espessa.</p>
-          <p>
-            Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
-            outras
-            25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
-            periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
-          </p>
-          <p>
-            As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida de
-            raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
-            global
-            das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
-            popular e no folclore em muitas sociedades ao redor do mundo.
-          </p>
-
-          <section>
-            <h2>Macaco</h2>
-            <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
-              raposas
-              têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e uma
-              cauda
-              longa e espessa.</p>
-            <p>
-              Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
-              outras
-              25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
-              periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
-            </p>
-            <p>
-              As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida
-              de
-              raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
-              global
-              das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na cultura
-              popular e no folclore em muitas sociedades ao redor do mundo.
-            </p>
-
-            <section>
-              <h2>Leão</h2>
-              <p>Raposas são pequenos a médios mamíferos onívoros pertencentes a vários gêneros da família Canidae. As
-                raposas
-                têm o crânio achatado, orelhas triangulares verticais, focinho pontiagudo e ligeiramente arrebitado e
-                uma cauda
-                longa e espessa.</p>
-              <p>
-                Doze espécies pertencem ao grupo monofilético de "raposas verdadeiras" do gênero Vulpes. Aproximadamente
-                outras
-                25 espécies atuais ou extintas são parte do grupo parafilético das raposas sul-americanas ou do grupo
-                periférico, que consiste na raposa-orelhas-de-morcego, raposa-cinzenta e raposa-das-ilhas.
-              </p>
-              <p>
-                As raposas vivem em todos os continentes, exceto a Antártida. De longe, a espécie mais comum e difundida
-                de
-                raposa é a raposa vermelha (Vulpes vulpes) com cerca de 47 subespécies reconhecidas. A distribuição
-                global
-                das raposas, juntamente com sua ampla reputação de astúcia, contribuíram para sua proeminência na
-                cultura
-                popular e no folclore em muitas sociedades ao redor do mundo.
-              </p>
-
-  </div>
 
   <section class="grid-section faq" id="faq">
-    <h1>FAQ</h1>
-    <dl>
+    <h1 class="titulo">FAQ</h1>
+    <dl class="faq-lista">
       <dt>Qual idade dos animais?</dt>
       <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio,
         caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
@@ -192,21 +205,21 @@
     </dl>
   </section>
 
-    <section class="grid-section contato" id="contato">
-      <h1>Contato</h1>
-      <div class="mapa">
-        <img src="img/mapa.png" alt="Mapa">
-      </div>
-      <ul class="dados">
-        <li>contato@mariana.com.br</li>
-        <li>+55 61 98197-6589</li>
-        <li>Rua do Conde nº 5674.</li>
-        <li>Rio de Janeiro - RJ</li>
-      </ul>
-    </section>
-    <footer class="copy">
-      <p>Todos os direitos reservados</p>
-    </footer>
+  <section class="grid-section contato" id="contato">
+    <h1 class="titulo">Contato</h1>
+    <div class="mapa">
+      <img src="img/mapa.png" alt="Mapa">
+    </div>
+    <ul class="dados">
+      <li>contato@mariana.com.br</li>
+      <li>+55 61 98197-6589</li>
+      <li>Rua do Conde nº 5674</li>
+      <li>Rio de Janeiro - RJ</li>
+    </ul>
+  </section>
+  <footer class="copy">
+    <p>Todos os direitos reservados</p>
+  </footer>
   <script src="script.js"></script>
 </body>
 
